--- a/index.html
+++ b/index.html
@@ -490,13 +490,13 @@
                 <div class="offer-card grow bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-sama-primary relative">
                     <div class="absolute top-0 right-0 bg-sama-accent text-sama-dark text-xs font-bold px-3 py-1 rounded-bl-lg">RECOMENDADO</div>
                     <div class="p-6 flex-grow">
-                        <span class="bg-green-100 text-green-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Membresía</span>
-                       <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Comunidad Sama Sana</h3>
-                        <p class="!text-gray-600 text-sm mb-6">Tu Comunidad de salud. Acompañamiento continuo.</p>
+                        <span class="bg-green-100 text-green-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Acceso VIP & Mentoría</span>
+                       <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Círculo Sama Sana</h3>
+                        <p class="!text-gray-600 text-sm mb-6">No tienes que transitar este proceso en soledad. Recibe la guía médica, la contención emocional y el paso a paso que necesitas para sanar.</p>
                         <ul class="space-y-3 mb-6">
-                           <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Sesiones en vivo</li>
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Biblioteca de contenido</li>
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Grupo de apoyo</li>
+                           <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Sesiones de Mentoría Grupal en Vivo</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Biblioteca de Clases y Herramientas</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Comunidad Privada de Soporte</li>
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
@@ -604,7 +604,7 @@
 
                 <div class="relative z-10">
                     <span class="inline-block bg-sama-light text-sama-dark text-xs font-bold px-3 py-1 rounded-full uppercase mb-4 tracking-wide">
-                        <i class="fa-regular fa-envelope mr-2"></i> Únete a la Comunidad
+                        <i class="fa-regular fa-envelope mr-2"></i> Newsletter
                     </span>
                     <h2 class="font-serif text-3xl font-bold text-sama-text mb-4">
                         Consejos de Bienestar Semanales
