--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     <div class="p-6 bg-gray-50 border-t">
                         <p class="text-3xl font-bold !text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
                         <!-- LINK PLACEHOLDER -->
-                        <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a la Comunidad</a>
+                        <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a Círculo</a>
                     </div>
                 </div>
 
