--- a/index.html
+++ b/index.html
@@ -469,20 +469,20 @@
                 <!-- Offer 1: Tripwire -->
                 <div class="offer-card start bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-blue-400">
                     <div class="p-6 flex-grow">
-                        <span class="bg-blue-100 text-blue-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Primeros Pasos</span>
-                        <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Cursos de Iniciación</h3>
-                        <p class="!text-gray-600 text-sm mb-6">Los fundamentos de las 4 Inteligencias del Sistema Sama Sana para aplicar hoy mismo.</p>
+                        <span class="bg-blue-100 text-blue-800 text-xs font-bold px-3 py-1 rounded-full uppercase">HÁBITOS Y AUTO-GESTIÓN</span>
+                        <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Colección Fundamentos Sama Sana</h3>
+                        <p class="!text-gray-600 text-sm mb-6">Domina los 4 pilares de tu salud a tu propio ritmo. Elige el curso específico que necesitas hoy o lleva el sistema completo.</p>
                         <ul class="space-y-3 mb-6">
-                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Alimentación saludable</li>
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Rutina de vida equilibrada</li>
-                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Emociones y Relaciones</li>
-                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Encontrando tu Misión y Propósito</li>
+                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Nutrición Anti-inflamatoria y Vitalidad</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Ritmos Biológicos y Descanso Reparador</li>
+                            <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Gestión Emocional y Vínculos Sanos</li>
+                             <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Conexión Espiritual y Propósito de Vida</li>
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
-                        <p class="text-3xl font-bold !text-sama-text mb-4">$27 <span class="text-sm font-normal text-gray-500">USD c/u</span></p>
+                        <p class="text-3xl font-bold !text-sama-text mb-4">Desde $27 <span class="text-sm font-normal text-gray-500">USD</span></p>
                         <!-- LINK PLACEHOLDER -->
-                        <a href="https://samaequilibrio.tiendup.com/" target="_blank" class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition text-center">Empezar Ahora</a>
+                        <a href="https://samaequilibrio.tiendup.com/" target="_blank" class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition text-center">Ver Cursos y Packs</a>
                     </div>
                 </div>
 
