--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 border-t">
-                        <p class="text-3xl font-bold !text-sama-text mb-4">$47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
+                        <p class="text-3xl font-bold !text-sama-text mb-4">Desde $47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
                         <!-- LINK PLACEHOLDER -->
                         <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a Círculo</a>
                     </div>
@@ -511,9 +511,9 @@
                     
                     <!-- PISO DE ARRIBA: Contenido (Fondo Blanco) -->
                     <div class="p-6 flex-grow">
-                        <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                       <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Sesión Médica Individual</h3>
-                        <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">ATENCIÓN CLÍNICA 1 A 1</span>
+                       <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Consulta Integral Sama</h3>
+                        <p class="text-gray-600 text-sm mb-6">Accede a un diagnóstico médico preciso y un plan de tratamiento a tu medida. Elige la modalidad de atención que mejor se adapte a tu situación actual.</p>
                         
                         <!-- Botones Switch -->
                         <div class="bg-gray-100 p-1 rounded-lg flex mb-4">
@@ -523,20 +523,21 @@
 
                         <!-- Lista: Equipo -->
                         <div id="info-team">
-                            <p class="text-xs text-gray-500 mb-2">Atención junto a terapeutas formados en Academia Sama Marga.</p>
+                            <p class="text-xs text-gray-500 mb-2">Ideal para quienes buscan un diagnóstico médico certero y una guía práctica de implementación paso a paso.</p>
                             <ul class="space-y-2 mb-4">
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico por el Dr.</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Seguimiento por Colaboradores</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Disponibilidad Rápida</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico Médico del Dr. Nicasio (15 min)</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Plan de Acción y Seguimiento por Terapeutas:</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Enfoque Práctico del Sistema Sama Sana</li>
                             </ul>
                         </div>
 
                         <!-- Lista: Dr (Oculta) -->
                         <div id="info-dr" class="hidden">
-                            <p class="text-xs text-gray-500 mb-2">Atención exclusiva con el Dr. Nicasio (Lista de Espera).</p>
+                            <p class="text-xs text-gray-500 mb-2">Atención exclusiva dedicada al abordaje profundo de casos complejos, crónicos o que requieren una visión integral detallada.</p>
                             <ul class="space-y-2 mb-4">
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Mentoría Directa</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Casos Complejos</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Sesión Extendida 1 a 1 con el Dr. Nicasio</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Análisis Profundo de Historia Clínica</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Estrategia Terapéutica de Alta Complejidad</li>
                             </ul>
                         </div>
                     </div>
@@ -547,13 +548,13 @@
                         <!-- Acción: Equipo -->
                         <div id="action-team">
                             <p class="text-3xl font-bold text-sama-text mb-4">$50 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Equipo</a>
+                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 rounded-lg transition text-center">Agendar Diagnóstico + Plan</a>
                         </div>
 
                         <!-- Acción: Dr (Oculta) -->
                         <div id="action-dr" class="hidden">
                             <p class="text-3xl font-bold text-sama-text mb-4">$200 <span class="text-sm font-normal text-gray-500">USD</span></p>
-                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Lista Espera</a>
+                            <a href="https://v2.soloturnos.com/empresa/nicasiocavilla" target="_blank" class="block w-full bg-gray-800 hover:bg-black text-white font-bold py-3 rounded-lg transition text-center">Ver Disponibilidad en Agenda</a>
                         </div>
 
                     </div>
