--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
   <!-- Filtros -->
             <div class="flex flex-wrap justify-center gap-4 mb-12">
                 <button onclick="filterOffers('all')" class="offer-filter-btn active bg-sama-dark text-white px-6 py-2 rounded-full text-sm font-bold transition">Ver Todo</button>
-                <button onclick="filterOffers('start')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Empezar</button>
-                <button onclick="filterOffers('grow')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Acompañamiento</button>
-                <button onclick="filterOffers('deep')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Profundizar</button>
+                <button onclick="filterOffers('start')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Aprender a mi Ritmo</button>
+                <button onclick="filterOffers('grow')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Unirme al Círculo</button>
+                <button onclick="filterOffers('deep')" class="offer-filter-btn bg-white text-sama-text border hover:bg-gray-50 px-6 py-2 rounded-full text-sm font-bold transition">Atención 1 a 1</button>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
@@ -526,7 +526,7 @@
                             <p class="text-xs text-gray-500 mb-2">Ideal para quienes buscan un diagnóstico médico certero y una guía práctica de implementación paso a paso.</p>
                             <ul class="space-y-2 mb-4">
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico Médico del Dr. Nicasio (15 min)</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Plan de Acción y Seguimiento por Terapeutas:</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Plan de Acción y Seguimiento por Terapeutas</li>
                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Enfoque Práctico del Sistema Sama Sana</li>
                             </ul>
                         </div>
