--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             <!-- Text Content -->
             <div class="w-full md:w-1/2 text-center md:text-left relative z-10 order-2 md:order-1">
                 <h1 class="font-serif text-3xl md:text-5xl lg:text-6xl !text-sama-text font-bold leading-tight mb-4 md:mb-6">
-                   Medicina Ayurveda: Tratamos a la persona, no solo<br>
-                    <span class="!text-sama-dark italic"> a la enfermedad.</span>
+                   Medicina Ayurveda: Tratamos a la persona,<br>
+                    <span class="!text-sama-dark italic">no a la enfermedad.</span>
                 </h1>
                 
                 <p class="text-base md:text-xl !text-gray-700 mb-6 md:mb-8 leading-relaxed block">
