--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <section id="problema" class="py-12 md:py-20 bg-white">
         <div class="container mx-auto px-4">
             <div class="text-center max-w-3xl mx-auto mb-10 md:mb-16">
-                <h2 class="font-serif text-2xl md:text-4xl !text-sama-text font-bold mb-4">¿Alguna de estas situaciones te resulta familiar?</h2>
+                <h2 class="font-serif text-2xl md:text-4xl !text-sama-text font-bold mb-4">¿Te identificas con alguna de éstas situaciones?</h2>
                 <p class="!text-gray-600">Muchas veces los síntomas son el lenguaje del cuerpo pidiendo un cambio. Hacé clic en las tarjetas con las que te identifiques.</p>
             </div>
 
@@ -244,7 +244,7 @@
                 <!-- Botón Centrado "Quiero saber más" -->
                 <div class="flex justify-center md:justify-start mt-4">
                     <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary px-8 py-3 rounded-full font-bold transition shadow-md inline-flex items-center justify-center text-center w-auto">
-                        Quiero saber más
+                        Ver cómo solucionarlo
                     </a>
                 </div>
             </div>
@@ -662,11 +662,11 @@
     <script>
         const problems = [
             { icon: "fa-heart-pulse", text: "Estudios normales, pero te sentís mal" },
-            { icon: "fa-brain", text: "Te abruma tanta información sobre salud" },
+            { icon: "fa-brain", text: "Te agobia tanta información sobre salud" },
             { icon: "fa-user-nurse", text: "Medicina convencional insuficiente" },
             { icon: "fa-face-tired", text: "Emociones obstaculizan tu día" },
             { icon: "fa-spa", text: "Necesidad de conexión espiritual" },
-            { icon: "fa-carrot", text: "Buscás hábitos simples y reales" }
+            { icon: "fa-carrot", text: "Te cuesta sostener hábitos saludables" }
         ];
 
         document.addEventListener('DOMContentLoaded', () => {
