--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <!-- Menú Desktop -->
             <div class="hidden md:flex space-x-8 text-sama-text font-medium">
-                <a href="#problema" class="hover:text-sama-dark transition">¿Te Identificas?</a>
+                <a href="#problema" class="hover:text-sama-dark transition">Descubre si podemos ayudarte</a>
                 <a href="#metodo" class="hover:text-sama-dark transition">El Método</a>
                 <a href="#bio" class="hover:text-sama-dark transition">Dr. Nicasio</a>
                 <a href="#ofertas" class="hover:text-sama-dark transition">Servicios</a>
@@ -140,7 +140,7 @@
                 <i class="fa-solid fa-xmark text-4xl"></i>
             </button>
             
-            <a href="#problema" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">¿Te Identificas?</a>
+            <a href="#problema" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Descubre si podemos ayudarte</a>
             <a href="#metodo" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">El Método</a>
             <a href="#bio" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Dr. Nicasio</a>
             <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
@@ -167,8 +167,8 @@
 
                 <!-- TITULAR (Optimizado para 2 líneas en desktop) -->
                 <h1 class="font-serif text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] xl:text-6xl !text-sama-text font-bold leading-tight mb-6">
-                    "Tratamos a la persona, <br class="hidden md:inline">
-                    <span class="italic text-sama-dark">no a la enfermedad."</span>
+                    "Tratamos la persona, <br class="hidden md:inline">
+                    <span class="italic text-sama-dark">no la enfermedad."</span>
                 </h1>
                 
                 <div class="inline-block bg-white/60 backdrop-blur-sm p-4 rounded-xl shadow-sm mb-6 md:mb-8 border border-white/50">
@@ -192,7 +192,7 @@
 
                     <!-- GRUPO 2: Botón Secundario -->
                     <a href="#ofertas" class="bg-white hover:bg-sama-light text-sama-text border-2 border-sama-primary w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-md flex items-center justify-center text-center">
-                        Ver cómo te ayudamos
+                        Ver Opciones de Ayuda
                     </a>
                 </div>
             </div>
