--- a/index.html
+++ b/index.html
@@ -271,19 +271,19 @@
                             <h4 class="font-bold !text-sama-text flex items-center">
                                 <i class="fa-solid fa-apple-whole w-8 text-yellow-600"></i> Inteligencia Nutricional
                             </h4>
-                            <p class="text-sm !text-gray-600 mt-1 ml-8">Alimentación consciente adecuada a tu biotipo.</p>
+                            <p class="text-sm !text-gray-600 mt-1 ml-8">Nutrición anti-inflamatoria diseñada para tu biotipo único.</p>
                         </div>
                         <div class="bg-white p-4 rounded-lg shadow-sm cursor-pointer hover:bg-gray-50 transition border-l-4 border-sama-primary">
                             <h4 class="font-bold !text-sama-text flex items-center">
-                                <i class="fa-solid fa-brain w-8 text-sama-dark"></i> Inteligencia Intelectual
+                                <i class="fa-solid fa-brain w-8 text-sama-dark"></i> Inteligencia Vital
                             </h4>
-                            <p class="text-sm !text-gray-600 mt-1 ml-8">Rutinas de vida saludables.</p>
+                            <p class="text-sm !text-gray-600 mt-1 ml-8">Sincronizar tus rutinas con los ritmos naturales para recuperar energía</p>
                         </div>
                         <div class="bg-white p-4 rounded-lg shadow-sm cursor-pointer hover:bg-gray-50 transition border-l-4 border-sama-accent">
                             <h4 class="font-bold !text-sama-text flex items-center">
                                 <i class="fa-solid fa-heart w-8 text-yellow-600"></i> Inteligencia Emocional
                             </h4>
-                            <p class="text-sm !text-gray-600 mt-1 ml-8">Gestionar emociones y establecer relaciones amorosas armónicas.</p>
+                            <p class="text-sm !text-gray-600 mt-1 ml-8">Transformar el estrés en calma y sanar tus vínculos</p>
                         </div>
                         <div class="bg-white p-4 rounded-lg shadow-sm cursor-pointer hover:bg-gray-50 transition border-l-4 border-sama-primary">
                             <h4 class="font-bold !text-sama-text flex items-center">
@@ -362,7 +362,7 @@
                         <h2 class="font-serif text-2xl md:text-4xl font-bold mb-2 !text-sama-text">Dr. Nicasio Cavilla</h2>
                         <div class="!text-sama-dark text-sm mb-4 font-mono font-bold">MN 109547 - MP 95329</div>
                         
-                        <h3 class="!text-yellow-600 font-bold uppercase tracking-wide text-sm mb-6">"Apoderando pacientes desde el 2002"</h3>
+                        <h3 class="!text-yellow-600 font-bold uppercase tracking-wide text-sm mb-6">"Devolviendo el control a mis pacientes desde el 2002"</h3>
                         
                         <p class="!text-gray-700 mb-6 leading-relaxed">
                             Graduado de la Universidad del Salvador y especializado en Nutrición en la UCA y en Ayurveda en la UBA. Tras viajar por India, Marruecos y Latinoamérica, el Dr. Nicasio es el puente entre la ciencia moderna y la sabiduría tradicional.
@@ -395,7 +395,7 @@
                                 <i class="fa-solid fa-hand-holding-heart text-sama-dark mt-1 mr-3 text-xl"></i>
                                 <div>
                                     <h4 class="font-bold text-sama-text">Coherencia Vital</h4>
-                                    <p class="text-xs text-gray-600">Enseño con el ejemplo de mi propio estilo de vida.</p>
+                                    <p class="text-xs text-gray-600">Transito el mismo camino de salud que enseño.</p>
                                 </div>
                             </div>
                         </div>
