--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                      pero aseguramos que "no a la enfermedad" se mantenga junto si es posible,
                      o que rompa de forma natural sin dejar palabras huérfanas. -->
                 <h1 class="font-serif text-3xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-5xl !text-sama-text font-bold leading-tight mb-6">
-                    "Tratamos la persona, <br>
-                    <span class="italic text-sama-dark inline-block">no la enfermedad."</span>
+                    Tratamos la persona, <br>
+                    <span class="italic text-sama-dark inline-block">no la enfermedad.</span>
                 </h1>
                 
                 <div class="inline-block bg-white/60 backdrop-blur-sm p-4 rounded-xl shadow-sm mb-6 md:mb-8 border border-white/50">
@@ -422,7 +422,7 @@
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-gray-600 italic mb-4 flex-grow"><strong>"En 20 días me había desinflamado y <strong>bajé 8 kilos<strong>. Pasé de estar triste y aislada a tener ganas de conectar."</p>
+                    <p class="text-gray-600 italic mb-4 flex-grow">"En 20 días me había <strong>desinflamado y bajé 8 kilos</strong>. Pasé de estar triste y aislada a tener <strong>ganas de conectar</strong>."</p>
                     <div class="font-bold text-sama-text mb-4">- Miriam V.</div>
                     <!-- Spotify Embed Miriam -->
                     <div class="w-full mt-auto">
@@ -435,7 +435,7 @@
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-gray-600 italic mb-4 flex-grow">"Este camino me dio <strong>contención y claridad<strong>. Honestamente, <strong>me cambió la vida."<strong></p>
+                    <p class="text-gray-600 italic mb-4 flex-grow">"Este camino me dio <strong>contención y claridad</strong>. Honestamente, <strong>me cambió la vida</strong>."</p>
                     <div class="font-bold text-sama-text mb-4">- Diego S.</div>
                      <!-- Spotify Embed Diego -->
                     <div class="w-full mt-auto">
@@ -448,7 +448,7 @@
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
-                    <p class="text-gray-600 italic mb-4 flex-grow"><strong>"Se me normalizó la presión, no tengo más colesterol<strong> y volví a sentirme realmente bien."</p>
+                    <p class="text-gray-600 italic mb-4 flex-grow">"Se me <strong>normalizó la presión</strong>, no tengo más colesterol y volví a <strong>sentirme realmente bien</strong>."</p>
                     <div class="font-bold text-sama-text mb-4">- Liliana E.</div>
                 <!-- Spotify Embed Liliana -->
                     <div class="w-full mt-auto">
@@ -656,7 +656,8 @@
                 <a href="https://www.youtube.com/@samaequilibrio" target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-youtube text-2xl"></i></a>
                 <a href="https://open.spotify.com/show/5b4IOnRgnFRvMVMD5Yh8mq?si=HFcC5HWMTPuWZ86rSruwDg&nd=1&dlsi=3e9358ff3035443e" target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-spotify text-2xl"></i></a>
             </div>
-                <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent text-sama-text hover:bg-orange-200 transition font-bold text-sm px-6 py-3 rounded-full shadow-md mb-4 border border-orange-200/50 inline-block">
+            <div class="border-t border-sama-primary/30 pt-8 w-full max-w-2xl flex flex-col items-center">    
+                <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent text-sama-text hover:bg-orange-200 transition font-bold text-sm px-6 py-3 rounded-full shadow-md mb-4 border-2 border-orange-400 inline-block">
                     ¿Aún no sabés tu Biotipo? Hacé el Test
                 </a>
                 <p class="text-gray-600 text-sm">&copy; 2026 Sama Equilibrio. Todos los derechos reservados.</p>
