--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     <form class="flex flex-col sm:flex-row gap-3">
                         <input type="email" placeholder="Ingresa tu email aquí..." class="flex-grow px-5 py-3 rounded-lg border border-gray-300 focus:outline-none focus:border-sama-primary focus:ring-2 focus:ring-sama-primary/20 transition" required>
                         <button type="submit" class="bg-sama-primary hover:bg-sama-dark text-white px-8 py-3 rounded-lg font-bold transition shadow-md whitespace-nowrap">
-                            Quiero mis consejos
+                            Suscríbete
                         </button>
                     </form>
                     <p class="text-xs text-gray-400 mt-4">
