--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="lg:w-1/2 text-center">
                     <h2 class="font-serif text-2xl md:text-4xl !text-sama-text font-bold mb-6">El Sistema Sama Sana</h2>
                     <p class="!text-gray-700 mb-6 text-lg">
-                        No es una dieta más. Es un camino de autoconocimiento y salud sostenible que integra la ciencia médica moderna con la sabiduría del Ayurveda.
+                        No es una dieta más. Es un camino de autoconocimiento y salud sostenible que <strong>integra la ciencia médica moderna con la sabiduría del Ayurveda</strong>.
                     </p>
                     <p class="!text-gray-700 mb-8">
                         Para lograr un equilibrio real, trabajamos sobre <strong>4 Inteligencias</strong> simultáneamente. Si una falla, el sistema se desequilibra.
