--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                 <a href="https://www.instagram.com/samaequilibrio/" target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-instagram text-2xl"></i></a>
                 <a href="https://www.facebook.com/sama.espaciodeequilibrio" target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-facebook text-2xl"></i></a>
                 <a href="https://www.youtube.com/@samaequilibrio" target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-youtube text-2xl"></i></a>
-                <a href="https://open.spotify.com/show/..." target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-spotify text-2xl"></i></a>
+                <a href="https://open.spotify.com/show/5b4IOnRgnFRvMVMD5Yh8mq?si=cc1ddffde69b45a3" target="_blank" class="hover:text-sama-primary transition transform hover:scale-110"><i class="fa-brands fa-spotify text-2xl"></i></a>
             </div>
 
             <div class="border-t border-sama-primary/30 pt-8 w-full max-w-2xl flex flex-col items-center">      
