--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                         origen: "landing_page"
                     });
 
-                    alert("¡Gracias por suscribirte! Te has unido a la comunidad Sama Sana.");
+                    alert("¡Gracias por suscribirte! Te has unido al Newsletter de Sama.");
                     emailInput.value = ""; 
                     
                 } catch (error) {
