--- a/index.html
+++ b/index.html
@@ -419,8 +419,9 @@
                 <!-- Testimonials... -->
                 <!-- Miriam -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/A3C558/ffffff?text=MV" alt="Miriam V." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
-                    <div class="flex justify-center text-yellow-400 mb-4">
+                    <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
+                        <img src="https://i.pravatar.cc/150?u=miriam" alt="Miriam V." class="w-full h-full object-cover object-center">
+                    </div>
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-gray-600 italic mb-4 flex-grow">"En 20 días me había <strong>desinflamado y bajé 8 kilos</strong>. Pasé de estar triste y aislada a tener <strong>ganas de conectar</strong>."</p>
@@ -432,7 +433,9 @@
                 </div>
                 <!-- Diego -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/6B8E23/ffffff?text=DS" alt="Diego S." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
+                     <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
+                        <img src="diego.jpg" alt="Diego S." class="w-full h-full object-cover object-center">
+                    </div>
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
@@ -445,7 +448,8 @@
                 </div>
                 <!-- Liliana -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="https://placehold.co/100x100/fdd17c/ffffff?text=LE" alt="Liliana E." class="w-16 h-16 rounded-full mx-auto mb-4 object-cover">
+                    <img src="liliana.jpg" alt="Liliana E." class="w-full h-full object-cover object-center">
+                    </div>
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
