--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Testimonials... -->
                 <!-- Miriam -->
-                <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
+                <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
                         <img src="https://i.pravatar.cc/150?u=miriam" alt="Miriam V." class="w-full h-full object-cover object-center">
-                    </div>
+                    </div> 
+                    <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
                     <p class="text-gray-600 italic mb-4 flex-grow">"En 20 días me había <strong>desinflamado y bajé 8 kilos</strong>. Pasé de estar triste y aislada a tener <strong>ganas de conectar</strong>."</p>
@@ -448,7 +448,8 @@
                 </div>
                 <!-- Liliana -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
-                    <img src="liliana.jpg" alt="Liliana E." class="w-full h-full object-cover object-center">
+                    <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
+                        <img src="https://i.pravatar.cc/150?u=liliana" alt="Liliana E." class="w-full h-full object-cover object-center">
                     </div>
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
