--- a/index.html
+++ b/index.html
@@ -418,9 +418,10 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Testimonials... -->
                 <!-- Miriam -->
-                <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
-                        <img src="https://i.pravatar.cc/150?u=miriam" alt="Miriam V." class="w-full h-full object-cover object-center">
-                    </div> 
+               <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
+                    <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
+                        <img src="miriam.png" alt="Miriam V." class="w-full h-full object-cover object-center">
+                    </div>
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
@@ -449,7 +450,7 @@
                 <!-- Liliana -->
                 <div class="bg-gray-50 p-6 rounded-xl border border-gray-100 text-center flex flex-col h-full">
                     <div class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden border-2 border-sama-primary shadow-sm">
-                        <img src="https://i.pravatar.cc/150?u=liliana" alt="Liliana E." class="w-full h-full object-cover object-center">
+                        <img src="liliana.jpg" alt="Liliana E." class="w-full h-full object-cover object-center">
                     </div>
                     <div class="flex justify-center text-yellow-400 mb-4">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
