--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
 
             <!-- CTA Desktop -->
-           <a href="https://tu-url-del-test.com" target="_blank" class="hidden md:inline-block bg-sama-accent hover:bg-orange-200 text-sama-text px-6 py-2 rounded-full font-bold transition shadow-md text-sm border-2 border-orange-400">
+           <a href="https://biotipo.vercel.app/" target="_blank" class="hidden md:inline-block bg-sama-accent hover:bg-orange-200 text-sama-text px-6 py-2 rounded-full font-bold transition shadow-md text-sm border-2 border-orange-400">
                ¿Cuál es mi biotipo (dosha)?
             </a>
 
@@ -146,7 +146,7 @@
             <a href="#bio" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Dr. Nicasio</a>
             <a href="#ofertas" onclick="toggleMobileMenu()" class="text-2xl font-serif text-sama-text font-bold hover:text-sama-dark transition">Servicios</a>
           
-            <a href="https://tu-url-del-test.com" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-auto text shadow-md border-2 border-orange-400 mt-4 text-lg text-center">
+            <a href="https://biotipo.vercel.app/" target="_blank" onclick="toggleMobileMenu()" class="block bg-sama-accent text-sama-text px-6 py-4 rounded-full font-bold w-auto text shadow-md border-2 border-orange-400 mt-4 text-lg text-center">
                 ¿Cuál es mi biotipo (dosha)?
             </a>
         </div>
@@ -186,7 +186,7 @@
                     
                     <!-- GRUPO 1: Botón Principal (URL Externa) + Leyenda -->
                     <div class="flex flex-col items-center sm:items-start gap-3 w-full sm:w-auto">
-                        <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent hover:bg-orange-200 !text-sama-text w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-lg flex items-center justify-center gap-3 transform hover:scale-105 duration-200 border-2 border-orange-400 cursor-pointer text-center">
+                        <a href="https://biotipo.vercel.app/" target="_blank" class="bg-sama-accent hover:bg-orange-200 !text-sama-text w-full sm:w-auto text-lg px-8 py-4 rounded-full font-bold transition shadow-lg flex items-center justify-center gap-3 transform hover:scale-105 duration-200 border-2 border-orange-400 cursor-pointer text-center">
                             <i class="fa-solid fa-dna"></i> ¿Cuál es mi biotipo (dosha)?
                         </a>
                         <p class="text-xs text-gray-600 italic leading-tight text-center sm:text-left max-w-[240px]">
@@ -664,7 +664,7 @@
             </div>
 
             <div class="border-t border-sama-primary/30 pt-8 w-full max-w-2xl flex flex-col items-center">      
-                <a href="https://tu-url-del-test.com" target="_blank" class="bg-sama-accent text-sama-text hover:bg-orange-200 transition font-bold text-sm px-6 py-3 rounded-full shadow-md mb-4 border-2 border-orange-400 inline-block">
+                <a href="https://biotipo.vercel.app/" target="_blank" class="bg-sama-accent text-sama-text hover:bg-orange-200 transition font-bold text-sm px-6 py-3 rounded-full shadow-md mb-4 border-2 border-orange-400 inline-block">
                     ¿Aún no sabés tu Biotipo? Hacé el Test
                 </a>
                 <p class="text-gray-600 text-sm">© 2026 Sama Equilibrio. Todos los derechos reservados.</p>
