--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     <div class="p-6 bg-gray-50 border-t">
                         <p class="text-3xl font-bold !text-sama-text mb-4">Desde $47 <span class="text-sm font-normal text-gray-500">USD / mes</span></p>
                         <!-- LINK PLACEHOLDER -->
-                        <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme a Círculo</a>
+                        <a href="https://ayurvedasama.com/" target="_blank" class="block w-full bg-sama-primary hover:bg-green-700 text-white font-bold py-3 rounded-lg transition text-center">Unirme al Círculo</a>
                     </div>
                 </div>
 
@@ -528,9 +528,9 @@
                 <div class="offer-card deep bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col hover:shadow-xl transition duration-300 border-t-4 border-purple-500 md:col-span-2 lg:col-span-1">
                     
                     <div class="p-6 flex-grow">
-                        <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Atención Personalizada</span>
-                        <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Sesión Médica 1-1</h3>
-                        <p class="text-gray-600 text-sm mb-6">Diagnóstico profundo y plan de tratamiento específico.</p>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-bold px-3 py-1 rounded-full uppercase">ATENCIÓN CLÍNICA 1 A 1</span>
+                        <h3 class="font-bold text-2xl !text-sama-text mt-4 mb-2">Consulta Integral Sama</h3>
+                        <p class="text-gray-600 text-sm mb-6">Accede a un diagnóstico médico preciso y un plan de tratamiento a tu medida. Elige la modalidad de atención que mejor se adapte a tu situación actual.</p>
                         
                         <div class="bg-gray-100 p-1 rounded-lg flex mb-4">
                             <button onclick="toggleConsult('team')" id="btn-team" class="w-1/2 py-1 rounded-md text-sm font-bold bg-white shadow-sm text-sama-text transition">Equipo Sama</button>
@@ -538,19 +538,20 @@
                         </div>
 
                         <div id="info-team">
-                            <p class="text-xs text-gray-500 mb-2">Atención junto a terapeutas formados en Academia Sama Marga.</p>
+                            <p class="text-xs text-gray-500 mb-2">Ideal para quienes buscan un diagnóstico médico certero y una guía práctica de implementación paso a paso.</p>
                             <ul class="space-y-2 mb-4">
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico por el Dr.</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Seguimiento por Colaboradores</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Disponibilidad Rápida</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Diagnóstico Médico del Dr. Nicasio (15 min)</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Plan de Acción y Seguimiento por Terapeutas</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-green-500 mr-2"></i> Enfoque Práctico del Sistema Sama Sana</li>
                             </ul>
                         </div>
 
                         <div id="info-dr" class="hidden">
-                            <p class="text-xs text-gray-500 mb-2">Atención exclusiva con el Dr. Nicasio (Lista de Espera).</p>
+                            <p class="text-xs text-gray-500 mb-2">Atención exclusiva dedicada al abordaje profundo de casos complejos, crónicos o que requieren una visión integral detallada.</p>
                             <ul class="space-y-2 mb-4">
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-star text-yellow-500 mr-2"></i> Mentoría Directa</li>
-                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-star text-yellow-500 mr-2"></i> Casos Complejos</li>
+                                 <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Sesión Extendida 1 a 1 con el Dr. Nicasio</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Análisis Profundo de Historia Clínica</li>
+                                <li class="flex items-center text-sm text-gray-600"><i class="fa-solid fa-check text-yellow-500 mr-2"></i> Estrategia Terapéutica de Alta Complejidad</li>
                             </ul>
                         </div>
                     </div>
